# panic4r

./: README.md
lib-TinyTemplate/TinyTemplate-1/: Cargo.toml
lib-aho-corasick/aho-corasick-1/: Cargo.toml
lib-brotli-decompressor/brotli-decompressor-1/: Cargo.toml
lib-bumpalo/bumpalo-1/: Cargo.toml
lib-bumpalo/bumpalo-2/: Cargo.toml
lib-bytemuck/bytemuck-1/: Cargo.toml
lib-bytes/bytes-1/: Cargo.toml
lib-bytes/bytes-2/: Cargo.toml
lib-bytes/bytes-3/: Cargo.toml
lib-cargo_metadata/cargo_metadata-1/: Cargo.toml
lib-chrono/chrono-1/: Cargo.toml
lib-chrono/chrono-10/: Cargo.toml
lib-chrono/chrono-11/: Cargo.toml
lib-chrono/chrono-12/: Cargo.toml
lib-chrono/chrono-13/: Cargo.toml
lib-chrono/chrono-2/: Cargo.toml
lib-chrono/chrono-3/: Cargo.toml
lib-chrono/chrono-4/: Cargo.toml
lib-chrono/chrono-5/: Cargo.toml
lib-chrono/chrono-6/: Cargo.toml
lib-chrono/chrono-7/: Cargo.toml
lib-chrono/chrono-8/: Cargo.toml
lib-chrono/chrono-9/: Cargo.toml
lib-clap/clap-1/: Cargo.toml
lib-clap/clap-2/: Cargo.toml
lib-clap/clap-3/: Cargo.toml
lib-clap/clap-4/: Cargo.toml
lib-crossbeam/crossbeam-1/: Cargo.toml  crossbeam-2128578c992a2415d34b1845494d74e0e40e8722.zip:Zone.Identifier
lib-filetime/filetime-1/: Cargo.toml  filetime-b53dd77c67e5ed2aee1a4d165ff679bc4f2a0c09.zip:Zone.Identifier  location
lib-fixedbitset/fixedbitset-1/: Cargo.toml  fixedbitset-4d6590f482b4510074fe4532dcee232293a4615a.zip:Zone.Identifier  location
lib-fixedbitset/fixedbitset-2/: Cargo.toml  fixedbitset-573e5c831e053734c50705649a495b23e504700a.zip:Zone.Identifier  location
lib-form_urlencoded/form_urlencoded-1/: Cargo.toml  rust-url-edeaea7f1e8bd08148bcd535f921fbc645bce53e.zip:Zone.Identifier
lib-form_urlencoded/form_urlencoded-2/: Cargo.toml  rust-url-31bc0da54c659094dacb1434996f10ed1b46b5ae.zip:Zone.Identifier
lib-futures/futures-1/: Cargo.toml
lib-futures/futures-3/: Cargo.toml
lib-futures/futures-4/: Cargo.toml
lib-futures/futures-5/: Cargo.toml
lib-futures/futures-6/: Cargo.toml
lib-futures/futures-6-invalid/: Cargo.toml
lib-gimli/gimli-1/: Cargo.toml  gimli-73c43d41249d24b05b6eb33863efd1fff6968d05.zip:Zone.Identifier  location
lib-hashbrown/hashbrown-1/: Cargo.toml  hashbrown-2e2e8275381912bab7776ea1e31d2b3b4d810589.zip:Zone.Identifier  location
lib-httparse/httparse-1/: Cargo.toml  httparse-5bc674970dec6ed9c44bf5e1260224523f102423.zip:Zone.Identifier
lib-hyper/hyper-1/: Cargo.toml
lib-hyper/hyper-1/hyper-1928682b33f98244435ba6d574677546205a15ec/: CHANGELOG.md
lib-hyper/hyper-1/src/: backtrace  hyper-1.patch  main.rs  panic_info.txt  perfect_location.txt
lib-idna/idna-1/: Cargo.toml
lib-idna/idna-10/: Cargo.toml
lib-idna/idna-11/: Cargo.toml
lib-idna/idna-12-invalid/: Cargo.toml
lib-idna/idna-2/: Cargo.toml
lib-idna/idna-3/: Cargo.toml
lib-idna/idna-4/: Cargo.toml
lib-idna/idna-5/: Cargo.toml
lib-idna/idna-6-invalid/: Cargo.toml
lib-num-bigint/num-bigint-1/: Cargo.toml
lib-num-bigint/num-bigint-1/src/: backtrace  main.rs  num-bigint-1.patch  panic_info.txt  perfect_location.txt
lib-prost/prost-1/: Cargo.toml  location  prost-1944c27c3029d01ff216e7b126d846b6cf8c7d77.zip:Zone.Identifier
lib-prost/prost-1/src/: backtrace  main.rs  panic_info.txt  perfect_location.txt  prost-1.patch
lib-reqwest/reqwest-1/: Cargo.toml
lib-reqwest/reqwest-1/src/: backtrace  main.rs  panic_info.txt  perfect_location.txt  reqwest-2.patch
lib-tokio/tokio-1/: Cargo.toml
lib-tokio/tokio-1/src/: backtrace  main.rs  panic_info.txt  perfect_location.txt  tokio-1.patch
lib-tracing/tracing-1-invalid/: Cargo.toml
lib-tracing/tracing-1-invalid/src/: main.rs
lib-tracing/tracing-2-invalid/: Cargo.toml
lib-tracing/tracing-2-invalid/src/: main.rs
(+1059 files in other folders)
