[package]
name = "tokio-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {path = "tokio-df6348fb4a8d9d34d241ab7275688e1ab489383c/tokio", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
tokio-util = {path = "tokio-df6348fb4a8d9d34d241ab7275688e1ab489383c/tokio-util", features = ["time"]}
futures = "0.3.30"